--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,24 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+  <repositories>
+    <repository>
+        <id>com.teamdev</id>
+        <url>https://europe-maven.pkg.dev/jxbrowser/releases</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.dropbox.core</groupId>
+      <artifactId>dropbox-core-sdk</artifactId>
+      <version>5.1.1</version>
     </dependency>
   </dependencies>
 
