--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <javafx.version>17.0.1</javafx.version>
+    <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
   </properties>
 
   <dependencies>
@@ -32,7 +34,12 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>17.0.1</version>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>${javafx.version}</version>
     </dependency>
   </dependencies>
 
@@ -49,14 +56,14 @@
           <plugin>
               <groupId>org.openjfx</groupId>
               <artifactId>javafx-maven-plugin</artifactId>
-              <version>0.0.8</version>
+              <version>${javafx.maven.plugin.version}</version>
               <executions>
                   <execution>
                       <!-- Default configuration for running -->
                       <!-- Usage: mvn clean javafx:run -->
                       <id>default-cli</id>
                       <configuration>
-                          <mainClass>org.uludag.bmb4016.gui.Demo</mainClass>
+                          <mainClass>org.uludag.bmb4016.gui.App</mainClass>
                       </configuration>
                   </execution>
               </executions>
