--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "org.uludag.bmb.gui/org.uludag.bmb.Main",
+            "projectName": "dbproject"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
+            "mainClass": "org.uludag.bmb.gui/org.uludag.bmb.Main",
             "projectName": "grup6"
         },
         {
