--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.uludag.bmb</groupId>
     <artifactId>dbproject</artifactId>
@@ -30,17 +29,22 @@
             <artifactId>javafx-web</artifactId>
             <version>17.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
             <resource>
-				<directory>src/main/resources/org/uludag/bmb/</directory>
+                <directory>src/main/resources/org/uludag/bmb/</directory>
             </resource>
-			<resource>
-				<directory>src/main/resources/org/uludag/bmb/gui/</directory>
-			</resource>
             <resource>
-				<directory>src/main/resources/org/uludag/bmb/oauth/</directory>
+                <directory>src/main/resources/org/uludag/bmb/gui/</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources/org/uludag/bmb/oauth/</directory>
             </resource>
         </resources>
         <plugins>
@@ -48,21 +52,21 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.1</version>
                 <executions>
-                   <execution>
-                      <phase>package</phase>
-                      <goals>
-                         <goal>shade</goal>
-                      </goals>
-                      <configuration>
-                         <transformers>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                               <mainClass>org.uludag.bmb.Main</mainClass>
-                            </transformer>
-                         </transformers>
-                      </configuration>
-                   </execution>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>org.uludag.bmb.Main</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
                 </executions>
-             </plugin>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
