--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -1,2 +1,7 @@
 clientIdentifier=dbproject/1.0-SNAPSHOT
 test123=hellodar    knesssss
+host=localhost
+port=8000
+context=/oauth
+redirectUri=http://localhost:8000/oauth
+timeout=60
