--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,17 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.sun.net.httpserver/http -->
+        <dependency>
+            <groupId>com.sun.net.httpserver</groupId>
+            <artifactId>http</artifactId>
+            <version>20070405</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
@@ -46,6 +57,9 @@
             </resource>
             <resource>
                 <directory>src/main/resources/org/uludag/bmb/oauth/</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources/org/uludag/bmb/httpserver/</directory>
             </resource>
         </resources>
         <plugins>
@@ -93,7 +107,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-              </plugin>
+            </plugin>
         </plugins>
     </build>
 </project>
