--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,17 @@
             <artifactId>javaee-api</artifactId>
             <version>8.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>11.0.8</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
