pull req öncesi 2

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,17 @@
 # Directory
 target/*
 
+/authfile.json
+
 # Log file
 *.log
 
-target/*
-target/**
+.vscode
+.idea
+
+/dependency-reduced-pom.xml
+
+/target/**
 
 # BlueJ files
 *.ctxt
