sahne geçişleri değişti,controller sistemi degisti

--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -6,3 +6,11 @@ context=/oauth
 redirectUri=http://localhost:8000/oauth
 timeout=60
 authinfo=authinfo.json
+
+mainSceneFxml=mainScene
+mainSceneWidth=600
+mainSceneHeigth=900
+
+startupSceneFxml=startupScene
+startupSceneWidth=340
+startupSceneHeigth=400
