authflow -> entity, minor constructor changes

--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -6,6 +6,7 @@ context=/oauth
 redirectUri=http://localhost:8000/oauth
 timeout=60
 authinfo=authinfo.json
+appInfoFile=/app.json
 
 mainSceneFxml=mainScene
 mainSceneWidth=900
