--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -1,9 +1,9 @@
 clientIdentifier=dbproject/1.0-SNAPSHOT
-test123=hellodar    knesssss
 host=localhost
 port=8000
 context=/oauth
 redirectUri=http://localhost:8000/oauth
+successUri=http://localhost:8000/success
 timeout=60
 authinfo=authinfo.json
 appInfoFile=/app.json
