--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,14 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <dependencies>
+        <!-- DROPBOX -->
         <dependency>
             <groupId>com.dropbox.core</groupId>
             <artifactId>dropbox-core-sdk</artifactId>
             <version>5.1.1</version>
         </dependency>
+        
+        <!-- FXML-->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -29,13 +32,16 @@
             <artifactId>javafx-web</artifactId>
             <version>17.0.1</version>
         </dependency>
+        
+        <!-- TEST-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.sun.net.httpserver/http -->
+
+        <!-- HTTP SERVER-->
         <dependency>
             <groupId>com.sun.net.httpserver</groupId>
             <artifactId>http</artifactId>
@@ -50,12 +56,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>5.3.16</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/javax/javaee-api -->
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>8.0.1</version>
         </dependency>
     </dependencies>
     <build>
