removed app.json |>> changes

--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -5,8 +5,10 @@ context=/oauth
 redirectUri=http://localhost:8000/oauth
 successUri=http://localhost:8000/success
 timeout=60
+
+saveFile=config.json
+
 authinfo=authinfo.json
-appInfoFile=/app.json
 
 mainSceneFxml=mainScene
 mainSceneWidth=900
