--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
                   </execution>
                 </executions>
                 <configuration>
-                  <!-- ... -->
+                        <mainClass>org.uludag.bmb.Main</mainClass>
                 </configuration>
               </plugin>
             </plugins>
