added, local config json | updated module info

--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -6,7 +6,7 @@ redirectUri=http://localhost:8000/oauth
 successUri=http://localhost:8000/success
 timeout=60
 
-saveFile=config.json
+configFile=config.json
 
 authinfo=authinfo.json
 
