--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,18 @@
             <artifactId>spring-test</artifactId>
             <version>5.3.16</version>
         </dependency>
+
+        <!-- JSON -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.2</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
