CloudListView, CheckBoxList işlemleri

--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -10,7 +10,7 @@ saveFile=config.json
 
 authinfo=authinfo.json
 
-mainSceneFxml=mainScene
+mainSceneFxml=test
 mainSceneWidth=900
 mainSceneHeigth=600
 
