--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -13,6 +13,7 @@ authinfo=authinfo.json
 mainSceneFxml=test
 mainSceneWidth=900
 mainSceneHeigth=600
+mainSceneCss=mainscene.css
 
 startupSceneFxml=startupScene
 startupSceneWidth=340
