deleted old hierarchy tree files | ui improvements

--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -10,7 +10,7 @@ configFile=config.json
 
 authinfo=authinfo.json
 
-mainSceneFxml=test
+mainSceneFxml=mainScene
 mainSceneWidth=900
 mainSceneHeigth=600
 mainSceneCss=mainscene.css
@@ -18,3 +18,4 @@ mainSceneCss=mainscene.css
 startupSceneFxml=startupScene
 startupSceneWidth=340
 startupSceneHeigth=400
+startupSceneCss=
