--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -18,4 +18,4 @@ mainSceneCss=mainscene.css
 startupSceneFxml=startupScene
 startupSceneWidth=340
 startupSceneHeigth=400
-startupSceneCss=
+startupSceneCss=startupscene.css
