mail ile paylaşım done

--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -19,3 +19,8 @@ startupSceneFxml=startupScene
 startupSceneWidth=340
 startupSceneHeigth=400
 startupSceneCss=startupscene.css
+
+shareSceneHeigth=400
+shareSceneWidth=600
+shareSceneFxml=shareScene.fxml
+shareSceneCss=sharescene.css
