--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -7,7 +7,7 @@ successUri=http://localhost:8000/success
 timeout=60
 
 configFile=config.json
-mapDbFile=mapfile.json
+dataFolder=Data
 
 authinfo=authinfo.json
 
