--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
             <artifactId>dropbox-core-sdk</artifactId>
             <version>5.1.1</version>
         </dependency>
-        
+
         <!-- FXML-->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -32,7 +32,7 @@
             <artifactId>javafx-web</artifactId>
             <version>17.0.1</version>
         </dependency>
-        
+
         <!-- TEST-->
         <dependency>
             <groupId>junit</groupId>
@@ -69,6 +69,14 @@
             <artifactId>jackson-core</artifactId>
             <version>2.13.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.36.0.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <resources>
@@ -135,37 +143,37 @@
     </build>
     <profiles>
         <profile>
-          <id>native</id>
-          <build>
-            <plugins>
-              <plugin>
-                <groupId>org.graalvm.buildtools</groupId>
-                <artifactId>native-maven-plugin</artifactId>
-                <version>0.9.11</version>
-                <extensions>true</extensions>
-                <executions>
-                  <execution>
-                    <id>build-native</id>
-                    <goals>
-                      <goal>build</goal>
-                    </goals>
-                    <phase>package</phase>
-                  </execution>
-                  <execution>
-                    <id>test-native</id>
-                    <goals>
-                      <goal>test</goal>
-                    </goals>
-                    <phase>test</phase>
-                  </execution>
-                </executions>
-                <configuration>
-                        <mainClass>org.uludag.bmb.Main</mainClass>
-                </configuration>
-              </plugin>
-            </plugins>
-          </build>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.9.11</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                            <execution>
+                                <id>test-native</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>test</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <mainClass>org.uludag.bmb.Main</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
-      </profiles>
-    
+    </profiles>
+
 </project>
