senkronizasyon engine start

--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -8,6 +8,11 @@ timeout=60
 
 configFile=config.json
 dataFolder=Data
+localDatabaseName=savefile
+
+syncStatusPort=4016
+syncStatusURL=http://localhost:4016/status
+syncStop=http://localhost:4016/stop
 
 authinfo=authinfo.json
 
