--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
             <version>3.36.0.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <resources>
