--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -8,7 +8,8 @@ timeout=60
 
 configFile=config.json
 dataFolder=Data
-localDatabaseName=savefile
+localDatabaseName=data
+dbRecordTable=records
 
 syncStatusPort=4016
 syncStatusURL=http://localhost:4016/status
