--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -10,6 +10,7 @@ table_Record=records
 table_Notification=notifications
 table_privateKey=privateKeyTable
 table_publicInfo=publicShareData
+table_sharedKeyPeople=sharedFiles
 
 database_Local=data
 database_Cloud=jdbc:sqlserver://bmb4016grup6.database.windows.net:1433;database=bmb4016public;user=bmb4016@bmb4016grup6;password=m43FJMNgXtsbAAr;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
