--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.70</version>
+        </dependency>
+        
+
         <!-- HTTP SERVER-->
         <dependency>
             <groupId>com.sun.net.httpserver</groupId>
