--- a/src/main/resources/org/uludag/bmb/application.properties
+++ b/src/main/resources/org/uludag/bmb/application.properties
@@ -11,6 +11,7 @@ table_Notification=notifications
 table_privateKey=privateKeyTable
 table_publicInfo=publicShareData
 table_sharedKeyPeople=sharedFiles
+table_sharedRecord=sharedRecords
 
 database_Local=data
 database_Cloud=jdbc:sqlserver://bmb4016grup6.database.windows.net:1433;database=bmb4016public;user=bmb4016@bmb4016grup6;password=m43FJMNgXtsbAAr;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
